--- a/custom_components/hitachi_yutaki/translations/en.json
+++ b/custom_components/hitachi_yutaki/translations/en.json
@@ -120,7 +120,7 @@
                 }
             },
             "otc_calculation_method_heating": {
-                "name": "Water Heating Temperature Control",
+                "name": "Heating Compensation Method",
                 "state": {
                     "disabled": "Disabled",
                     "points": "Points",
@@ -129,7 +129,7 @@
                 }
             },
             "otc_calculation_method_cooling": {
-                "name": "Water Cooling Temperature Control",
+                "name": "Cooling Compensation Method",
                 "state": {
                     "disabled": "Disabled",
                     "points": "Points",
@@ -159,10 +159,10 @@
         },
         "number": {
             "max_flow_temp_heating_otc": {
-                "name": "Water Heating Temperature Setting"
+                "name": "Maximum Flow Temperature Heating"
             },
             "max_flow_temp_cooling_otc": {
-                "name": "Water Cooling Temperature Setting"
+                "name": "Maximum Flow Temperature Cooling"
             },
             "heat_eco_offset": {
                 "name": "Heat ECO Offset"
@@ -170,17 +170,20 @@
             "cool_eco_offset": {
                 "name": "Cool ECO Offset"
             },
+            "current_temp": {
+                "name": "Current Temperature"
+            },
             "target_temp": {
                 "name": "Target Temperature"
             },
-            "temperature": {
-                "name": "Temperature"
+            "dhw_target_temperature": {
+                "name": "Target Temperature"
+            },
+            "pool_target_temperature": {
+                "name": "Target Temperature"
             },
             "antilegionella_temp": {
                 "name": "Anti-legionella Temperature"
-            },
-            "current_temp": {
-                "name": "Current Temperature"
             }
         }
     }
