feat: Add DHW temp setting

--- a/custom_components/hitachi_yutaki/translations/en.json
+++ b/custom_components/hitachi_yutaki/translations/en.json
@@ -176,8 +176,14 @@
             "target_temp": {
                 "name": "Target Temperature"
             },
+            "dhw_current_temperature": {
+                "name": "Current Temperature"
+            },
             "dhw_target_temperature": {
                 "name": "Target Temperature"
+            },
+            "pool_current_temperature": {
+                "name": "Current Temperature"
             },
             "pool_target_temperature": {
                 "name": "Target Temperature"
