--- a/custom_components/hitachi_yutaki/translations/en.json
+++ b/custom_components/hitachi_yutaki/translations/en.json
@@ -7,7 +7,8 @@
                     "port": "Port",
                     "name": "Name",
                     "slave": "Modbus slave ID",
-                    "scan_interval": "Scan interval (seconds)"
+                    "scan_interval": "Scan interval (seconds)",
+                    "dev_mode": "Developer mode (show all device types)"
                 },
                 "description": "Configure your Hitachi Yutaki heat pump via ATW-MBS-02 gateway.",
                 "title": "Hitachi Yutaki"
