feat: Basic Alarm code entity

--- a/custom_components/hitachi_yutaki/translations/fr.json
+++ b/custom_components/hitachi_yutaki/translations/fr.json
@@ -50,6 +50,9 @@
             "power_consumption": {
                 "name": "Consommation Électrique"
             },
+            "alarm_code": {
+                "name": "Code d'Alarme"
+            },
             "r134a_discharge_temp": {
                 "name": "Température de Refoulement R134a"
             },
