--- a/custom_components/hitachi_yutaki/translations/fr.json
+++ b/custom_components/hitachi_yutaki/translations/fr.json
@@ -18,7 +18,8 @@
             "cannot_connect": "Échec de connexion",
             "invalid_slave": "ID esclave Modbus invalide",
             "modbus_error": "Erreur de communication Modbus",
-            "unknown": "Erreur inattendue"
+            "unknown": "Erreur inattendue",
+            "invalid_central_control_mode": "La pompe à chaleur doit être configurée en mode Central 'Air' (1). Modes possibles : Local (0), Air (1), Water (2), Total (3). Veuillez modifier ce réglage dans les paramètres de votre pompe à chaleur (Configuration du système > Options générales > Option commande externe > Mode de controle = Air)."
         },
         "abort": {
             "already_configured": "L'appareil est déjà configuré"
