--- a/custom_components/hitachi_yutaki/translations/en.json
+++ b/custom_components/hitachi_yutaki/translations/en.json
@@ -32,12 +32,23 @@
                     "host": "IP address",
                     "port": "Port",
                     "name": "Name",
+                    "show_advanced": "Show advanced settings",
                     "slave": "Modbus slave ID",
                     "scan_interval": "Scan interval (seconds)",
                     "dev_mode": "Developer mode (show all device types)"
                 },
                 "description": "Configure your Hitachi Yutaki heat pump via ATW-MBS-02 gateway.",
                 "title": "Hitachi Yutaki"
+            },
+            "advanced": {
+                "data": {
+                    "port": "Port",
+                    "slave": "Modbus slave ID",
+                    "scan_interval": "Scan interval (seconds)",
+                    "dev_mode": "Developer mode"
+                },
+                "description": "Advanced settings are intended for developers and users with custom Modbus configurations. Only modify these values if you know what you're doing.",
+                "title": "Advanced Settings"
             }
         },
         "error": {
