--- a/custom_components/hitachi_yutaki/translations/fr.json
+++ b/custom_components/hitachi_yutaki/translations/fr.json
@@ -32,12 +32,23 @@
                     "host": "Adresse IP",
                     "port": "Port",
                     "name": "Nom",
+                    "show_advanced": "Afficher les paramètres avancés",
                     "slave": "ID esclave Modbus",
                     "scan_interval": "Intervalle de scan (secondes)",
                     "dev_mode": "Mode développeur (affiche tous les types de devices)"
                 },
                 "description": "Configurez votre pompe à chaleur Hitachi Yutaki via la passerelle ATW-MBS-02.",
                 "title": "Hitachi Yutaki"
+            },
+            "advanced": {
+                "data": {
+                    "port": "Port",
+                    "slave": "ID esclave Modbus",
+                    "scan_interval": "Intervalle de scan (secondes)",
+                    "dev_mode": "Mode développeur"
+                },
+                "description": "Les paramètres avancés sont destinés aux développeurs et aux utilisateurs ayant une configuration Modbus personnalisée. Ne modifiez ces valeurs que si vous savez ce que vous faites.",
+                "title": "Paramètres avancés"
             }
         },
         "error": {
