feat: Alarm codes description

--- a/custom_components/hitachi_yutaki/translations/fr.json
+++ b/custom_components/hitachi_yutaki/translations/fr.json
@@ -88,7 +88,79 @@
                 "name": "Consommation Électrique"
             },
             "alarm_code": {
-                "name": "Code d'Alarme"
+                "name": "Code d'Alarme",
+                "state": {
+                    "alarm_code_0": "Pas d'alarme",
+                    "alarm_code_2": "Activation du dispositif de sécurité du groupe extérieur",
+                    "alarm_code_3": "Transmission anormale entre les unités intérieures et le groupe extérieur",
+                    "alarm_code_4": "Transmission anormale entre la PCB de commande et la PCB de l'inverter du groupe extérieur",
+                    "alarm_code_5": "Code de fonctionnement anormal du captage du signal de phase",
+                    "alarm_code_6": "Tension excessivement basse ou élevée pour l'inverter",
+                    "alarm_code_7": "Baisse de la surchauffe de gaz de refoulement",
+                    "alarm_code_8": "Température du gaz de refoulement excessive en haut du compresseur",
+                    "alarm_code_11": "Anomalie de la thermistance de température d'arrivée de l'eau (THMWI)",
+                    "alarm_code_12": "Anomalie de la thermistance de la température de sortie de l'eau (THMWO)",
+                    "alarm_code_13": "Anomalie de la thermistance de température de la tuyauterie de liquide intérieure R410A (THML)",
+                    "alarm_code_14": "Anomalie de la thermistance de température de la tuyauterie de gaz intérieure R410A (THMG)",
+                    "alarm_code_15": "Anomalie de la thermistance de la température de sortie de l'eau du circuit 2 (THMWO2)",
+                    "alarm_code_16": "Anomalie de la thermistance de la température de l'eau chaude sanitaire (THMDHW)",
+                    "alarm_code_17": "Anomalie du capteur de température auxiliaire 2 (THMAUX2)",
+                    "alarm_code_18": "Capteur universel",
+                    "alarm_code_19": "Anomalie de la thermistance de la température",
+                    "alarm_code_20": "Anomalie de la thermistance de la température du gaz de refoulement",
+                    "alarm_code_21": "Anomalie de capteur haute pression",
+                    "alarm_code_22": "Fonctionnement anormal de la thermistance de la température extérieure (THM7)",
+                    "alarm_code_23": "Fonctionnement anormal de la thermistance du gaz de refoulement (THM9)",
+                    "alarm_code_24": "Fonctionnement anormal de la thermistance de la température d'évaporation pendant le chauffage (THM8)",
+                    "alarm_code_25": "Anomalie de la thermistance du capteur auxiliaire 3 (THMAUX3)",
+                    "alarm_code_26": "Erreur de réglage de puissance ou de puissance combinée entre unité intérieure et groupe extérieur",
+                    "alarm_code_35": "Erreur de réglage de puissance ou de puissance combinée entre unité intérieure et groupe extérieur",
+                    "alarm_code_36": "Erreur de réglage de puissance ou de puissance combinée entre unité intérieure et groupe extérieur",
+                    "alarm_code_38": "Anomalie du circuit de protection (groupe extérieur)",
+                    "alarm_code_40": "Réglage incorrect du contrôleur d'unité",
+                    "alarm_code_41": "Surcharge du pressostat de haute pression",
+                    "alarm_code_42": "Surcharge en chauffage (le pressostat haute pression doit être activé)",
+                    "alarm_code_45": "Activation de l'organe de protection contre l'augmentation de la haute pression",
+                    "alarm_code_47": "Déclenchement de la protection du système contre une pression d'aspiration insuffisante",
+                    "alarm_code_48": "Activation de la protection de surintensité",
+                    "alarm_code_51": "Fonctionnement anormal de sonde d'intensité",
+                    "alarm_code_53": "Activation du module de transistor",
+                    "alarm_code_54": "Anomalie de température d'ailette de l'inverter",
+                    "alarm_code_57": "Anomalie de la protection du moteur du ventilateur (moteur du ventilateur CC)",
+                    "alarm_code_70": "Alarme du débit hydraulique et dysfonctionnement de la pompe à eau",
+                    "alarm_code_72": "Alarme du thermostat du chauffe-eau",
+                    "alarm_code_73": "Mélange de la protection de limite de température maxi. pour le circuit mixte",
+                    "alarm_code_74": "Protection de limite de température de l'unité",
+                    "alarm_code_75": "Protection antigel par détection de la température d'entrée/sortie d'eau froide",
+                    "alarm_code_76": "Arrêt de la protection anti-gel par le thermistor de température des liquides intérieur",
+                    "alarm_code_77": "Défaut de la communication du récepteur sans fil intelligent",
+                    "alarm_code_78": "Défaut de la communication RF",
+                    "alarm_code_79": "Réglage incorrect de la puissance",
+                    "alarm_code_80": "Défaut de communication télécommande H-LINK",
+                    "alarm_code_81": "Interruption momentanée de l'alimentation ou Basse tension détectée",
+                    "alarm_code_83": "Anomalie de la basse pression dans le circuit hydraulique",
+                    "alarm_code_101": "Commande d'activation du pressostat haute pression",
+                    "alarm_code_102": "Activation du contrôle de la protection pour une excessive haute pression",
+                    "alarm_code_104": "Activation du contrôle de la protection en raison d'une basse pression",
+                    "alarm_code_105": "Différence de basse pression excessive",
+                    "alarm_code_106": "Température du gaz de refoulement excessive",
+                    "alarm_code_129": "Défaillance du capteur de pression du gaz de refoulement",
+                    "alarm_code_130": "Défaillance du capteur de pression du gaz d'aspiration",
+                    "alarm_code_132": "Erreur de transmission entre la PCB de l'inverter et la PCB principale",
+                    "alarm_code_134": "Contrôle des anomalités de la phase de la source d'alimentation",
+                    "alarm_code_135": "Réglage incorrect de PCB",
+                    "alarm_code_151": "Contrôle des anomalies de tension de l'inverter",
+                    "alarm_code_152": "Fonctionnement anormal de sonde d'intensité",
+                    "alarm_code_153": "Activation de protection contre la surintensité de l'inverter (I)",
+                    "alarm_code_154": "Activation de la protection du module de transistor",
+                    "alarm_code_155": "Contrôle des anomalies de l'ailette de l'inverter",
+                    "alarm_code_156": "Panne de l'inverter",
+                    "alarm_code_157": "Autres anomalies",
+                    "alarm_code_202": "Réglages incorrectes du contrôleur PC-ARF HE",
+                    "alarm_code_203": "Arrêt de PC-ARFHE esclave en réponse au PC-ARFHE maître",
+                    "alarm_code_204": "L'unité intérieure perd la communication avec le PC-ARFHE maître",
+                    "alarm_code_205": "Alarme centrale, aucun message central"
+                }
             },
             "r134a_discharge_temp": {
                 "name": "Température de Refoulement R134a"
