--- a/custom_components/hitachi_yutaki/translations/en.json
+++ b/custom_components/hitachi_yutaki/translations/en.json
@@ -88,7 +88,79 @@
                 "name": "Power Consumption"
             },
             "alarm_code": {
-                "name": "Alarm Code"
+                "name": "Alarm Code",
+                "state": {
+                    "alarm_code_0": "No Alarm",
+                    "alarm_code_2": "Activation of outdoor unit safety device",
+                    "alarm_code_3": "Abnormal transmission between indoor units and outdoor unit",
+                    "alarm_code_4": "Abnormal transmission between outdoor unit control PCB and inverter PCB",
+                    "alarm_code_5": "Phase detection signal abnormal operation code",
+                    "alarm_code_6": "Excessively low or high voltage for inverter",
+                    "alarm_code_7": "Decrease in discharge gas superheat",
+                    "alarm_code_8": "Excessive discharge gas temperature at top of compressor",
+                    "alarm_code_11": "Water inlet temperature thermistor abnormality (THMWI)",
+                    "alarm_code_12": "Water outlet temperature thermistor abnormality (THMWO)",
+                    "alarm_code_13": "Indoor R410A liquid pipe temperature thermistor abnormality (THML)",
+                    "alarm_code_14": "Indoor R410A gas pipe temperature thermistor abnormality (THMG)",
+                    "alarm_code_15": "Circuit 2 water outlet temperature thermistor abnormality (THMWO2)",
+                    "alarm_code_16": "DHW temperature thermistor abnormality (THMDHW)",
+                    "alarm_code_17": "Auxiliary sensor 2 abnormality (THMAUX2)",
+                    "alarm_code_18": "Universal sensor abnormality",
+                    "alarm_code_19": "Temperature thermistor abnormality",
+                    "alarm_code_20": "Discharge gas temperature thermistor abnormality",
+                    "alarm_code_21": "High pressure sensor abnormality",
+                    "alarm_code_22": "Outdoor temperature thermistor abnormality (THM7)",
+                    "alarm_code_23": "Discharge gas temperature thermistor abnormality (THM9)",
+                    "alarm_code_24": "Evaporation temperature thermistor abnormality during heating (THM8)",
+                    "alarm_code_25": "Auxiliary sensor 3 abnormality (THMAUX3)",
+                    "alarm_code_26": "Power or combined power setting error between indoor and outdoor unit",
+                    "alarm_code_35": "Power or combined power setting error between indoor and outdoor unit",
+                    "alarm_code_36": "Power or combined power setting error between indoor and outdoor unit",
+                    "alarm_code_38": "Protection circuit abnormality (outdoor unit)",
+                    "alarm_code_40": "Incorrect unit controller setting",
+                    "alarm_code_41": "High pressure switch overload",
+                    "alarm_code_42": "Heating overload (high pressure switch must be activated)",
+                    "alarm_code_45": "High pressure increase protection activation",
+                    "alarm_code_47": "System protection activation against insufficient suction pressure",
+                    "alarm_code_48": "Overcurrent protection activation",
+                    "alarm_code_51": "Current sensor abnormal operation",
+                    "alarm_code_53": "Transistor module activation",
+                    "alarm_code_54": "Inverter fin temperature abnormality",
+                    "alarm_code_57": "Fan motor protection abnormality (DC fan motor)",
+                    "alarm_code_70": "Water flow alarm and water pump malfunction",
+                    "alarm_code_72": "Water heater thermostat alarm",
+                    "alarm_code_73": "Mixed circuit maximum temperature limit protection",
+                    "alarm_code_74": "Unit temperature limit protection",
+                    "alarm_code_75": "Anti-freeze protection by cold water inlet/outlet temperature detection",
+                    "alarm_code_76": "Anti-freeze protection stop by indoor liquid temperature thermistor",
+                    "alarm_code_77": "Smart wireless receiver communication fault",
+                    "alarm_code_78": "RF communication fault",
+                    "alarm_code_79": "Incorrect power setting",
+                    "alarm_code_80": "H-LINK remote control communication fault",
+                    "alarm_code_81": "Momentary power interruption or Low voltage detected",
+                    "alarm_code_83": "Low pressure abnormality in hydraulic circuit",
+                    "alarm_code_101": "High pressure switch activation command",
+                    "alarm_code_102": "Excessive high pressure protection control activation",
+                    "alarm_code_104": "Low pressure protection control activation",
+                    "alarm_code_105": "Excessive low pressure difference",
+                    "alarm_code_106": "Excessive discharge gas temperature",
+                    "alarm_code_129": "Discharge gas pressure sensor failure",
+                    "alarm_code_130": "Suction gas pressure sensor failure",
+                    "alarm_code_132": "Transmission error between inverter PCB and main PCB",
+                    "alarm_code_134": "Power source phase abnormality control",
+                    "alarm_code_135": "Incorrect PCB setting",
+                    "alarm_code_151": "Inverter voltage abnormality control",
+                    "alarm_code_152": "Current sensor abnormal operation",
+                    "alarm_code_153": "Inverter overcurrent protection activation (I)",
+                    "alarm_code_154": "Transistor module protection activation",
+                    "alarm_code_155": "Inverter fin abnormality control",
+                    "alarm_code_156": "Inverter failure",
+                    "alarm_code_157": "Other abnormalities",
+                    "alarm_code_202": "Incorrect PC-ARF HE controller settings",
+                    "alarm_code_203": "Slave PC-ARFHE stop in response to master PC-ARFHE",
+                    "alarm_code_204": "Indoor unit loses communication with master PC-ARFHE",
+                    "alarm_code_205": "Central alarm, no central message"
+                }
             },
             "r134a_discharge_temp": {
                 "name": "R134a Discharge Temperature"
