feat: Manager ECS directly without climate

--- a/custom_components/hitachi_yutaki/translations/fr.json
+++ b/custom_components/hitachi_yutaki/translations/fr.json
@@ -286,7 +286,7 @@
                 "name": "Boost"
             },
             "high_demand": {
-                "name": "Haute Demande"
+                "name": "Demande intense"
             },
             "antilegionella": {
                 "name": "Anti-légionelle"
