fix: DHW antilegionella and translations

--- a/custom_components/hitachi_yutaki/translations/fr.json
+++ b/custom_components/hitachi_yutaki/translations/fr.json
@@ -283,7 +283,7 @@
                 "name": "Mode ECO"
             },
             "boost": {
-                "name": "Boost"
+                "name": "Forçage ECS"
             },
             "high_demand": {
                 "name": "Demande intense"
