--- a/custom_components/hitachi_yutaki/translations/fr.json
+++ b/custom_components/hitachi_yutaki/translations/fr.json
@@ -63,18 +63,19 @@
       "operation_state": {
         "name": "État de Fonctionnement",
         "state": {
-          "operation_state_0": "Arrêt",
-          "operation_state_1": "Pas de demande refroidissement",
-          "operation_state_2": "Refroidissement Thermo OFF",
-          "operation_state_3": "Refroidissement Thermo ON",
-          "operation_state_4": "Pas de demande chauffage",
-          "operation_state_5": "Chauffage Thermo OFF",
-          "operation_state_6": "Chauffage Thermo ON",
-          "operation_state_7": "ECS OFF",
-          "operation_state_8": "ECS ON",
-          "operation_state_9": "Piscine OFF",
-          "operation_state_10": "Piscine ON",
-          "operation_state_11": "Alarme"
+          "operation_state_off": "Arrêt",
+          "operation_state_cool_demand_off": "Pas de demande refroidissement",
+          "operation_state_cool_thermo_off": "Refroidissement Thermo OFF",
+          "operation_state_cool_thermo_on": "Refroidissement Thermo ON",
+          "operation_state_heat_demand_off": "Pas de demande chauffage",
+          "operation_state_heat_thermo_off": "Chauffage Thermo OFF",
+          "operation_state_heat_thermo_on": "Chauffage Thermo ON",
+          "operation_state_dhw_off": "ECS OFF",
+          "operation_state_dhw_on": "ECS ON",
+          "operation_state_pool_off": "Piscine OFF",
+          "operation_state_pool_on": "Piscine ON",
+          "operation_state_alarm": "Alarme",
+          "operation_state_unknown": "État Inconnu"
         }
       },
       "outdoor_temp": {
