--- a/custom_components/hitachi_yutaki/translations/fr.json
+++ b/custom_components/hitachi_yutaki/translations/fr.json
@@ -25,25 +25,61 @@
       "name": "Piscine"
     }
   },
+  "selector": {
+    "power_supply": {
+      "options": {
+        "single": "Monophasé",
+        "three": "Triphasé"
+      }
+    }
+  },
+  "options": {
+    "step": {
+      "init": {
+        "data": {
+          "power_supply": "Alimentation électrique",
+          "host": "Adresse IP de la passerelle",
+          "port": "Port de la passerelle"
+        },
+        "description": "Modifiez les paramètres de votre pompe à chaleur Hitachi Yutaki"
+      }
+    }
+  },
   "config": {
     "step": {
       "user": {
         "data": {
           "name": "Nom",
-          "host": "Adresse IP",
+          "host": "Adresse IP de la passerelle",
+          "port": "Port de la passerelle",
           "show_advanced": "Afficher les paramètres avancés"
         },
-        "description": "Configurez votre pompe à chaleur Hitachi Yutaki via l'interface Modbus TCP/IP exposée par la passerelle ATW-MBS-02. Important : votre pompe à chaleur doit être configurée en mode de contrôle 'Air' pour permettre à la passerelle d'avoir un accès complet en lecture et écriture aux registres de contrôle de la pompe à chaleur.",
-        "title": "Hitachi Yutaki"
+        "data_description": {
+          "host": "Adresse IP de la passerelle ATW-MBS-02",
+          "port": "Port de communication Modbus TCP (par défaut: 502)"
+        },
+        "description": "Configurez votre pompe à chaleur Hitachi Yutaki via l'interface Modbus TCP/IP exposée par la passerelle ATW-MBS-02.",
+        "title": "Configuration de la passerelle"
+      },
+      "power": {
+        "data": {
+          "power_supply": "Alimentation électrique",
+          "voltage_entity": "Entité de tension"
+        },
+        "data_description": {
+          "power_supply": "Type d'alimentation électrique de la pompe à chaleur",
+          "voltage_entity": "Entité fournissant la tension du réseau électrique"
+        },
+        "description": "Configuration de l'alimentation électrique",
+        "title": "Alimentation électrique"
       },
       "advanced": {
         "data": {
-          "port": "Port",
           "slave": "ID esclave Modbus",
           "scan_interval": "Intervalle de scan (secondes)",
-          "dev_mode": "Mode développeur (ajoute tous les devices, même s'ils ne sont pas configurés dans le système)"
+          "dev_mode": "Mode développeur"
         },
-        "description": "Les paramètres avancés sont destinés aux développeurs et aux utilisateurs ayant une configuration Modbus personnalisée. Ne modifiez ces valeurs que si vous savez ce que vous faites.",
+        "description": "Les paramètres avancés sont destinés aux développeurs et aux utilisateurs ayant une configuration Modbus personnalisée.",
         "title": "Paramètres avancés"
       }
     },
